Oregon over Tech

--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,36 +365,36 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-31 22:23:47</em></div>
-<div class="line"><em>Last bowl scored:  CFP Quarterfinal (Cotton) (Ohio State vs. Miami)</em></div>
+<div class="line"><em>Last updated:  2026-01-01 16:21:31</em></div>
+<div class="line"><em>Last bowl scored:  CFP Quarterfinal (Orange) (Texas Tech vs. Oregon)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Sherrone Moore's Bad Day 31.75</strong></div>
-<div class="line">2. <strong>Battered Austin Syndrome 31.5</strong></div>
-<div class="line">3. Barkside Ballers 29.75</div>
+<div class="line">1. Barkside Ballers 32.75</div>
+<div class="line">2. <strong>Sherrone Moore's Bad Day 31.75</strong></div>
+<div class="line">3. <strong>Battered Austin Syndrome 31.5</strong></div>
 <div class="line">4. <strong>Vibe-free since '73 28.75</strong></div>
-<div class="line">5. Mama Dawg 27.25</div>
-<div class="line">6. Dazed and Confoosballed 26.75</div>
-<div class="line">7. Bearly Watching 26.25</div>
-<div class="line">7. Eclipse 26.25</div>
-<div class="line">9. Wisconsin shoud've been here 25.75</div>
-<div class="line">9. We Pay Players 25.75</div>
-<div class="line">11. Just Call Me Dr. 25.5</div>
-<div class="line">12. Arandas legacy Year 24.5</div>
-<div class="line">12. Down 24.5</div>
-<div class="line">12. BlueOrRed 24.5</div>
-<div class="line">15. NoNND-Bo 2 24.25</div>
-<div class="line">16. Sascha Picks Dogs 23.25</div>
-<div class="line">16. Sierra LeCat Dowdle 23.25</div>
-<div class="line">18. #MamaBear 23.0</div>
-<div class="line">18. Game of Throws 23.0</div>
-<div class="line">20. Upside 22.75</div>
-<div class="line">21. Momma Longhorn 21.75</div>
-<div class="line">22. Call Me An Optimist 21.25</div>
-<div class="line">23. bugaroo 21.0</div>
-<div class="line">24. NoNND-Bo 1 20.75</div>
-<div class="line">25. First Round SIL 19.75</div>
-<div class="line">25. Not So New Guy 19.75</div>
+<div class="line">5. Just Call Me Dr. 28.5</div>
+<div class="line">6. BlueOrRed 27.5</div>
+<div class="line">7. Mama Dawg 27.25</div>
+<div class="line">8. Dazed and Confoosballed 26.75</div>
+<div class="line">9. Bearly Watching 26.25</div>
+<div class="line">9. Eclipse 26.25</div>
+<div class="line">11. Wisconsin shoud've been here 25.75</div>
+<div class="line">11. Upside 25.75</div>
+<div class="line">11. We Pay Players 25.75</div>
+<div class="line">14. Arandas legacy Year 24.5</div>
+<div class="line">14. Down 24.5</div>
+<div class="line">16. NoNND-Bo 2 24.25</div>
+<div class="line">17. Sascha Picks Dogs 23.25</div>
+<div class="line">17. Sierra LeCat Dowdle 23.25</div>
+<div class="line">19. #MamaBear 23.0</div>
+<div class="line">19. Game of Throws 23.0</div>
+<div class="line">21. First Round SIL 22.75</div>
+<div class="line">21. Not So New Guy 22.75</div>
+<div class="line">23. Momma Longhorn 21.75</div>
+<div class="line">24. Call Me An Optimist 21.25</div>
+<div class="line">25. bugaroo 21.0</div>
+<div class="line">26. NoNND-Bo 1 20.75</div>
 <div class="line">27. <strong>The New Mendoza Line 15.5</strong></div>
 </div>
 </div>
