--- a/bowl_pool/2025-2026_CFP/rankings.html
+++ b/bowl_pool/2025-2026_CFP/rankings.html
@@ -365,36 +365,36 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-31 22:23:46</em></div>
-<div class="line"><em>Last bowl scored:  CFP Quarterfinal (Cotton) (Ohio State vs. Miami)</em></div>
+<div class="line"><em>Last updated:  2026-01-01 16:21:30</em></div>
+<div class="line"><em>Last bowl scored:  CFP Quarterfinal (Orange) (Texas Tech vs. Oregon)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. <strong>Battered Austin Syndrome 11.5</strong></div>
 <div class="line">2. <strong>Sherrone Moore's Bad Day 10.5</strong></div>
 <div class="line">2. Down 10.5</div>
-<div class="line">4. <strong>Vibe-free since '73 9.5</strong></div>
-<div class="line">4. Sascha Picks Dogs 9.5</div>
-<div class="line">4. NoNND-Bo 2 9.5</div>
-<div class="line">7. Mama Dawg 8.5</div>
-<div class="line">7. Bearly Watching 8.5</div>
-<div class="line">7. Call Me An Optimist 8.5</div>
-<div class="line">10. We Pay Players 8.0</div>
-<div class="line">11. bugaroo 7.0</div>
-<div class="line">11. Eclipse 7.0</div>
-<div class="line">11. #MamaBear 7.0</div>
-<div class="line">11. Just Call Me Dr. 7.0</div>
-<div class="line">15. Barkside Ballers 6.5</div>
-<div class="line">15. Wisconsin shoud've been here 6.5</div>
-<div class="line">17. Dazed and Confoosballed 6.0</div>
-<div class="line">17. Momma Longhorn 6.0</div>
-<div class="line">17. First Round SIL 6.0</div>
-<div class="line">17. BlueOrRed 6.0</div>
-<div class="line">21. Sierra LeCat Dowdle 5.5</div>
-<div class="line">22. Arandas legacy Year 4.0</div>
-<div class="line">22. NoNND-Bo 1 4.0</div>
-<div class="line">22. Not So New Guy 4.0</div>
-<div class="line">22. Upside 4.0</div>
-<div class="line">22. Game of Throws 4.0</div>
+<div class="line">4. Just Call Me Dr. 10.0</div>
+<div class="line">5. Barkside Ballers 9.5</div>
+<div class="line">5. <strong>Vibe-free since '73 9.5</strong></div>
+<div class="line">5. Sascha Picks Dogs 9.5</div>
+<div class="line">5. NoNND-Bo 2 9.5</div>
+<div class="line">9. First Round SIL 9.0</div>
+<div class="line">9. BlueOrRed 9.0</div>
+<div class="line">11. Mama Dawg 8.5</div>
+<div class="line">11. Bearly Watching 8.5</div>
+<div class="line">11. Call Me An Optimist 8.5</div>
+<div class="line">14. We Pay Players 8.0</div>
+<div class="line">15. bugaroo 7.0</div>
+<div class="line">15. Eclipse 7.0</div>
+<div class="line">15. #MamaBear 7.0</div>
+<div class="line">15. Not So New Guy 7.0</div>
+<div class="line">15. Upside 7.0</div>
+<div class="line">20. Wisconsin shoud've been here 6.5</div>
+<div class="line">21. Dazed and Confoosballed 6.0</div>
+<div class="line">21. Momma Longhorn 6.0</div>
+<div class="line">23. Sierra LeCat Dowdle 5.5</div>
+<div class="line">24. Arandas legacy Year 4.0</div>
+<div class="line">24. NoNND-Bo 1 4.0</div>
+<div class="line">24. Game of Throws 4.0</div>
 <div class="line">27. <strong>The New Mendoza Line 3.0</strong></div>
 </div>
 </div>
