--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -1458,6 +1458,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>32</td>
+<td>CFP Quarterfinal (Orange)</td>
+<td>Texas Tech</td>
+<td>Oregon</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -1562,7 +1595,7 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>29.75</strong></td>
+<td><strong>32.75</strong></td>
 <td><strong>28.75</strong></td>
 <td><strong>26.75</strong></td>
 <td><strong>23.25</strong></td>
@@ -1581,12 +1614,12 @@ ul.auto-toc {
 <td><strong>21.25</strong></td>
 <td><strong>24.5</strong></td>
 <td><strong>26.25</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>23.0</strong></td>
-<td><strong>24.5</strong></td>
-<td><strong>25.5</strong></td>
-<td><strong>19.75</strong></td>
 <td><strong>22.75</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>27.5</strong></td>
+<td><strong>28.5</strong></td>
+<td><strong>22.75</strong></td>
+<td><strong>25.75</strong></td>
 <td><strong>25.75</strong></td>
 <td><strong>23.0</strong></td>
 </tr>
