--- a/bowl_pool/2025-2026_CFP/results.html
+++ b/bowl_pool/2025-2026_CFP/results.html
@@ -600,6 +600,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>6</td>
+<td>CFP Quarterfinal (Orange)</td>
+<td>Texas Tech</td>
+<td>Oregon</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -704,7 +737,7 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>6.5</strong></td>
+<td><strong>9.5</strong></td>
 <td><strong>9.5</strong></td>
 <td><strong>6.0</strong></td>
 <td><strong>9.5</strong></td>
@@ -723,12 +756,12 @@ ul.auto-toc {
 <td><strong>8.5</strong></td>
 <td><strong>10.5</strong></td>
 <td><strong>7.0</strong></td>
-<td><strong>6.0</strong></td>
+<td><strong>9.0</strong></td>
 <td><strong>7.0</strong></td>
-<td><strong>6.0</strong></td>
+<td><strong>9.0</strong></td>
+<td><strong>10.0</strong></td>
 <td><strong>7.0</strong></td>
-<td><strong>4.0</strong></td>
-<td><strong>4.0</strong></td>
+<td><strong>7.0</strong></td>
 <td><strong>8.0</strong></td>
 <td><strong>4.0</strong></td>
 </tr>
