--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,36 +365,36 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2026-01-01 16:21:31</em></div>
-<div class="line"><em>Last bowl scored:  CFP Quarterfinal (Orange) (Texas Tech vs. Oregon)</em></div>
+<div class="line"><em>Last updated:  2026-01-01 18:21:19</em></div>
+<div class="line"><em>Last bowl scored:  CFP Quarterfinal (Rose) (Indiana vs. Alabama)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Barkside Ballers 32.75</div>
-<div class="line">2. <strong>Sherrone Moore's Bad Day 31.75</strong></div>
-<div class="line">3. <strong>Battered Austin Syndrome 31.5</strong></div>
-<div class="line">4. <strong>Vibe-free since '73 28.75</strong></div>
-<div class="line">5. Just Call Me Dr. 28.5</div>
-<div class="line">6. BlueOrRed 27.5</div>
-<div class="line">7. Mama Dawg 27.25</div>
-<div class="line">8. Dazed and Confoosballed 26.75</div>
-<div class="line">9. Bearly Watching 26.25</div>
-<div class="line">9. Eclipse 26.25</div>
-<div class="line">11. Wisconsin shoud've been here 25.75</div>
-<div class="line">11. Upside 25.75</div>
-<div class="line">11. We Pay Players 25.75</div>
-<div class="line">14. Arandas legacy Year 24.5</div>
-<div class="line">14. Down 24.5</div>
-<div class="line">16. NoNND-Bo 2 24.25</div>
-<div class="line">17. Sascha Picks Dogs 23.25</div>
-<div class="line">17. Sierra LeCat Dowdle 23.25</div>
-<div class="line">19. #MamaBear 23.0</div>
-<div class="line">19. Game of Throws 23.0</div>
-<div class="line">21. First Round SIL 22.75</div>
-<div class="line">21. Not So New Guy 22.75</div>
-<div class="line">23. Momma Longhorn 21.75</div>
-<div class="line">24. Call Me An Optimist 21.25</div>
-<div class="line">25. bugaroo 21.0</div>
-<div class="line">26. NoNND-Bo 1 20.75</div>
+<div class="line">1. <strong>Sherrone Moore's Bad Day 34.75</strong></div>
+<div class="line">2. <strong>Battered Austin Syndrome 34.5</strong></div>
+<div class="line">3. Barkside Ballers 32.75</div>
+<div class="line">4. <strong>Vibe-free since '73 31.75</strong></div>
+<div class="line">5. Dazed and Confoosballed 29.75</div>
+<div class="line">6. Eclipse 29.25</div>
+<div class="line">7. Wisconsin shoud've been here 28.75</div>
+<div class="line">7. Upside 28.75</div>
+<div class="line">9. Just Call Me Dr. 28.5</div>
+<div class="line">10. Arandas legacy Year 27.5</div>
+<div class="line">10. Down 27.5</div>
+<div class="line">10. BlueOrRed 27.5</div>
+<div class="line">13. Mama Dawg 27.25</div>
+<div class="line">14. Sierra LeCat Dowdle 26.25</div>
+<div class="line">14. Bearly Watching 26.25</div>
+<div class="line">16. #MamaBear 26.0</div>
+<div class="line">16. Game of Throws 26.0</div>
+<div class="line">18. First Round SIL 25.75</div>
+<div class="line">18. Not So New Guy 25.75</div>
+<div class="line">18. We Pay Players 25.75</div>
+<div class="line">21. NoNND-Bo 2 24.25</div>
+<div class="line">22. bugaroo 24.0</div>
+<div class="line">23. NoNND-Bo 1 23.75</div>
+<div class="line">24. Sascha Picks Dogs 23.25</div>
+<div class="line">25. Momma Longhorn 21.75</div>
+<div class="line">26. Call Me An Optimist 21.25</div>
 <div class="line">27. <strong>The New Mendoza Line 15.5</strong></div>
 </div>
 </div>
