--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -1491,6 +1491,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>33</td>
+<td>CFP Quarterfinal (Rose)</td>
+<td>Indiana</td>
+<td>Alabama</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -1596,32 +1629,32 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td><strong>32.75</strong></td>
-<td><strong>28.75</strong></td>
-<td><strong>26.75</strong></td>
+<td><strong>31.75</strong></td>
+<td><strong>29.75</strong></td>
 <td><strong>23.25</strong></td>
 <td><strong>15.5</strong></td>
-<td><strong>31.75</strong></td>
+<td><strong>34.75</strong></td>
 <td><strong>21.75</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>23.25</strong></td>
-<td><strong>31.5</strong></td>
-<td><strong>24.5</strong></td>
+<td><strong>24.0</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>34.5</strong></td>
+<td><strong>27.5</strong></td>
 <td><strong>27.25</strong></td>
-<td><strong>20.75</strong></td>
+<td><strong>23.75</strong></td>
 <td><strong>24.25</strong></td>
-<td><strong>25.75</strong></td>
+<td><strong>28.75</strong></td>
 <td><strong>26.25</strong></td>
 <td><strong>21.25</strong></td>
-<td><strong>24.5</strong></td>
-<td><strong>26.25</strong></td>
-<td><strong>22.75</strong></td>
-<td><strong>23.0</strong></td>
+<td><strong>27.5</strong></td>
+<td><strong>29.25</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>26.0</strong></td>
 <td><strong>27.5</strong></td>
 <td><strong>28.5</strong></td>
-<td><strong>22.75</strong></td>
 <td><strong>25.75</strong></td>
+<td><strong>28.75</strong></td>
 <td><strong>25.75</strong></td>
-<td><strong>23.0</strong></td>
+<td><strong>26.0</strong></td>
 </tr>
 </tbody>
 </table>
