--- a/bowl_pool/2025-2026_CFP/rankings.html
+++ b/bowl_pool/2025-2026_CFP/rankings.html
@@ -365,36 +365,36 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2026-01-01 16:21:30</em></div>
-<div class="line"><em>Last bowl scored:  CFP Quarterfinal (Orange) (Texas Tech vs. Oregon)</em></div>
+<div class="line"><em>Last updated:  2026-01-01 18:21:18</em></div>
+<div class="line"><em>Last bowl scored:  CFP Quarterfinal (Rose) (Indiana vs. Alabama)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Battered Austin Syndrome 11.5</strong></div>
-<div class="line">2. <strong>Sherrone Moore's Bad Day 10.5</strong></div>
-<div class="line">2. Down 10.5</div>
-<div class="line">4. Just Call Me Dr. 10.0</div>
-<div class="line">5. Barkside Ballers 9.5</div>
-<div class="line">5. <strong>Vibe-free since '73 9.5</strong></div>
-<div class="line">5. Sascha Picks Dogs 9.5</div>
-<div class="line">5. NoNND-Bo 2 9.5</div>
-<div class="line">9. First Round SIL 9.0</div>
-<div class="line">9. BlueOrRed 9.0</div>
-<div class="line">11. Mama Dawg 8.5</div>
-<div class="line">11. Bearly Watching 8.5</div>
-<div class="line">11. Call Me An Optimist 8.5</div>
-<div class="line">14. We Pay Players 8.0</div>
-<div class="line">15. bugaroo 7.0</div>
-<div class="line">15. Eclipse 7.0</div>
-<div class="line">15. #MamaBear 7.0</div>
-<div class="line">15. Not So New Guy 7.0</div>
-<div class="line">15. Upside 7.0</div>
-<div class="line">20. Wisconsin shoud've been here 6.5</div>
-<div class="line">21. Dazed and Confoosballed 6.0</div>
-<div class="line">21. Momma Longhorn 6.0</div>
-<div class="line">23. Sierra LeCat Dowdle 5.5</div>
-<div class="line">24. Arandas legacy Year 4.0</div>
-<div class="line">24. NoNND-Bo 1 4.0</div>
-<div class="line">24. Game of Throws 4.0</div>
+<div class="line">1. <strong>Battered Austin Syndrome 14.5</strong></div>
+<div class="line">2. <strong>Sherrone Moore's Bad Day 13.5</strong></div>
+<div class="line">2. Down 13.5</div>
+<div class="line">4. <strong>Vibe-free since '73 12.5</strong></div>
+<div class="line">5. First Round SIL 12.0</div>
+<div class="line">6. bugaroo 10.0</div>
+<div class="line">6. Eclipse 10.0</div>
+<div class="line">6. #MamaBear 10.0</div>
+<div class="line">6. Just Call Me Dr. 10.0</div>
+<div class="line">6. Not So New Guy 10.0</div>
+<div class="line">6. Upside 10.0</div>
+<div class="line">12. Barkside Ballers 9.5</div>
+<div class="line">12. Sascha Picks Dogs 9.5</div>
+<div class="line">12. NoNND-Bo 2 9.5</div>
+<div class="line">12. Wisconsin shoud've been here 9.5</div>
+<div class="line">16. Dazed and Confoosballed 9.0</div>
+<div class="line">16. BlueOrRed 9.0</div>
+<div class="line">18. Sierra LeCat Dowdle 8.5</div>
+<div class="line">18. Mama Dawg 8.5</div>
+<div class="line">18. Bearly Watching 8.5</div>
+<div class="line">18. Call Me An Optimist 8.5</div>
+<div class="line">22. We Pay Players 8.0</div>
+<div class="line">23. Arandas legacy Year 7.0</div>
+<div class="line">23. NoNND-Bo 1 7.0</div>
+<div class="line">23. Game of Throws 7.0</div>
+<div class="line">26. Momma Longhorn 6.0</div>
 <div class="line">27. <strong>The New Mendoza Line 3.0</strong></div>
 </div>
 </div>
