--- a/bowl_pool/2025-2026_CFP/results.html
+++ b/bowl_pool/2025-2026_CFP/results.html
@@ -633,6 +633,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>7</td>
+<td>CFP Quarterfinal (Rose)</td>
+<td>Indiana</td>
+<td>Alabama</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -738,32 +771,32 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td><strong>9.5</strong></td>
-<td><strong>9.5</strong></td>
-<td><strong>6.0</strong></td>
+<td><strong>12.5</strong></td>
+<td><strong>9.0</strong></td>
 <td><strong>9.5</strong></td>
 <td><strong>3.0</strong></td>
-<td><strong>10.5</strong></td>
+<td><strong>13.5</strong></td>
 <td><strong>6.0</strong></td>
-<td><strong>7.0</strong></td>
-<td><strong>5.5</strong></td>
-<td><strong>11.5</strong></td>
-<td><strong>4.0</strong></td>
+<td><strong>10.0</strong></td>
 <td><strong>8.5</strong></td>
-<td><strong>4.0</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>7.0</strong></td>
+<td><strong>8.5</strong></td>
+<td><strong>7.0</strong></td>
 <td><strong>9.5</strong></td>
-<td><strong>6.5</strong></td>
+<td><strong>9.5</strong></td>
 <td><strong>8.5</strong></td>
 <td><strong>8.5</strong></td>
-<td><strong>10.5</strong></td>
-<td><strong>7.0</strong></td>
-<td><strong>9.0</strong></td>
-<td><strong>7.0</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>10.0</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>10.0</strong></td>
 <td><strong>9.0</strong></td>
 <td><strong>10.0</strong></td>
-<td><strong>7.0</strong></td>
-<td><strong>7.0</strong></td>
+<td><strong>10.0</strong></td>
+<td><strong>10.0</strong></td>
 <td><strong>8.0</strong></td>
-<td><strong>4.0</strong></td>
+<td><strong>7.0</strong></td>
 </tr>
 </tbody>
 </table>
