--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -1524,6 +1524,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>3.0</td>
 </tr>
+<tr><td>34</td>
+<td>CFP Quarterfinal (Sugar)</td>
+<td>Georgia</td>
+<td>Ole Miss</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -1633,12 +1666,12 @@ ul.auto-toc {
 <td><strong>29.75</strong></td>
 <td><strong>23.25</strong></td>
 <td><strong>15.5</strong></td>
-<td><strong>34.75</strong></td>
+<td><strong>37.75</strong></td>
 <td><strong>21.75</strong></td>
 <td><strong>24.0</strong></td>
 <td><strong>26.25</strong></td>
 <td><strong>34.5</strong></td>
-<td><strong>27.5</strong></td>
+<td><strong>30.5</strong></td>
 <td><strong>27.25</strong></td>
 <td><strong>23.75</strong></td>
 <td><strong>24.25</strong></td>
@@ -1648,8 +1681,8 @@ ul.auto-toc {
 <td><strong>27.5</strong></td>
 <td><strong>29.25</strong></td>
 <td><strong>25.75</strong></td>
-<td><strong>26.0</strong></td>
-<td><strong>27.5</strong></td>
+<td><strong>29.0</strong></td>
+<td><strong>30.5</strong></td>
 <td><strong>28.5</strong></td>
 <td><strong>25.75</strong></td>
 <td><strong>28.75</strong></td>
