--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,27 +365,27 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2026-01-01 18:21:19</em></div>
-<div class="line"><em>Last bowl scored:  CFP Quarterfinal (Rose) (Indiana vs. Alabama)</em></div>
+<div class="line"><em>Last updated:  2026-01-01 23:51:33</em></div>
+<div class="line"><em>Last bowl scored:  CFP Quarterfinal (Sugar) (Georgia vs. Ole Miss)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Sherrone Moore's Bad Day 34.75</strong></div>
+<div class="line">1. <strong>Sherrone Moore's Bad Day 37.75</strong></div>
 <div class="line">2. <strong>Battered Austin Syndrome 34.5</strong></div>
 <div class="line">3. Barkside Ballers 32.75</div>
 <div class="line">4. <strong>Vibe-free since '73 31.75</strong></div>
-<div class="line">5. Dazed and Confoosballed 29.75</div>
-<div class="line">6. Eclipse 29.25</div>
-<div class="line">7. Wisconsin shoud've been here 28.75</div>
-<div class="line">7. Upside 28.75</div>
-<div class="line">9. Just Call Me Dr. 28.5</div>
-<div class="line">10. Arandas legacy Year 27.5</div>
-<div class="line">10. Down 27.5</div>
-<div class="line">10. BlueOrRed 27.5</div>
-<div class="line">13. Mama Dawg 27.25</div>
-<div class="line">14. Sierra LeCat Dowdle 26.25</div>
-<div class="line">14. Bearly Watching 26.25</div>
-<div class="line">16. #MamaBear 26.0</div>
-<div class="line">16. Game of Throws 26.0</div>
+<div class="line">5. Arandas legacy Year 30.5</div>
+<div class="line">5. BlueOrRed 30.5</div>
+<div class="line">7. Dazed and Confoosballed 29.75</div>
+<div class="line">8. Eclipse 29.25</div>
+<div class="line">9. #MamaBear 29.0</div>
+<div class="line">10. Wisconsin shoud've been here 28.75</div>
+<div class="line">10. Upside 28.75</div>
+<div class="line">12. Just Call Me Dr. 28.5</div>
+<div class="line">13. Down 27.5</div>
+<div class="line">14. Mama Dawg 27.25</div>
+<div class="line">15. Sierra LeCat Dowdle 26.25</div>
+<div class="line">15. Bearly Watching 26.25</div>
+<div class="line">17. Game of Throws 26.0</div>
 <div class="line">18. First Round SIL 25.75</div>
 <div class="line">18. Not So New Guy 25.75</div>
 <div class="line">18. We Pay Players 25.75</div>
