--- a/bowl_pool/2025-2026_CFP/results.html
+++ b/bowl_pool/2025-2026_CFP/results.html
@@ -666,6 +666,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>3.0</td>
 </tr>
+<tr><td>8</td>
+<td>CFP Quarterfinal (Sugar)</td>
+<td>Georgia</td>
+<td>Ole Miss</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -775,12 +808,12 @@ ul.auto-toc {
 <td><strong>9.0</strong></td>
 <td><strong>9.5</strong></td>
 <td><strong>3.0</strong></td>
-<td><strong>13.5</strong></td>
+<td><strong>16.5</strong></td>
 <td><strong>6.0</strong></td>
 <td><strong>10.0</strong></td>
 <td><strong>8.5</strong></td>
 <td><strong>14.5</strong></td>
-<td><strong>7.0</strong></td>
+<td><strong>10.0</strong></td>
 <td><strong>8.5</strong></td>
 <td><strong>7.0</strong></td>
 <td><strong>9.5</strong></td>
@@ -790,8 +823,8 @@ ul.auto-toc {
 <td><strong>13.5</strong></td>
 <td><strong>10.0</strong></td>
 <td><strong>12.0</strong></td>
-<td><strong>10.0</strong></td>
-<td><strong>9.0</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>12.0</strong></td>
 <td><strong>10.0</strong></td>
 <td><strong>10.0</strong></td>
 <td><strong>10.0</strong></td>
