--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,37 +365,37 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2026-01-01 23:51:33</em></div>
-<div class="line"><em>Last bowl scored:  CFP Quarterfinal (Sugar) (Georgia vs. Ole Miss)</em></div>
+<div class="line"><em>Last updated:  2026-01-02 17:28:40</em></div>
+<div class="line"><em>Last bowl scored:  ARMED FORCES BOWL (Texas State vs. Rice)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. <strong>Sherrone Moore's Bad Day 37.75</strong></div>
-<div class="line">2. <strong>Battered Austin Syndrome 34.5</strong></div>
-<div class="line">3. Barkside Ballers 32.75</div>
-<div class="line">4. <strong>Vibe-free since '73 31.75</strong></div>
-<div class="line">5. Arandas legacy Year 30.5</div>
-<div class="line">5. BlueOrRed 30.5</div>
-<div class="line">7. Dazed and Confoosballed 29.75</div>
-<div class="line">8. Eclipse 29.25</div>
-<div class="line">9. #MamaBear 29.0</div>
-<div class="line">10. Wisconsin shoud've been here 28.75</div>
-<div class="line">10. Upside 28.75</div>
-<div class="line">12. Just Call Me Dr. 28.5</div>
-<div class="line">13. Down 27.5</div>
-<div class="line">14. Mama Dawg 27.25</div>
-<div class="line">15. Sierra LeCat Dowdle 26.25</div>
-<div class="line">15. Bearly Watching 26.25</div>
-<div class="line">17. Game of Throws 26.0</div>
-<div class="line">18. First Round SIL 25.75</div>
-<div class="line">18. Not So New Guy 25.75</div>
-<div class="line">18. We Pay Players 25.75</div>
-<div class="line">21. NoNND-Bo 2 24.25</div>
-<div class="line">22. bugaroo 24.0</div>
-<div class="line">23. NoNND-Bo 1 23.75</div>
+<div class="line">2. <strong>Battered Austin Syndrome 36.5</strong></div>
+<div class="line">3. <strong>Vibe-free since '73 33.75</strong></div>
+<div class="line">4. Barkside Ballers 32.75</div>
+<div class="line">5. Arandas legacy Year 31.5</div>
+<div class="line">5. BlueOrRed 31.5</div>
+<div class="line">7. Dazed and Confoosballed 30.75</div>
+<div class="line">8. Just Call Me Dr. 30.5</div>
+<div class="line">9. Eclipse 30.25</div>
+<div class="line">10. #MamaBear 30.0</div>
+<div class="line">11. Wisconsin shoud've been here 29.75</div>
+<div class="line">11. Upside 29.75</div>
+<div class="line">13. Down 29.5</div>
+<div class="line">14. Mama Dawg 28.25</div>
+<div class="line">15. Bearly Watching 27.25</div>
+<div class="line">16. Game of Throws 27.0</div>
+<div class="line">17. First Round SIL 26.75</div>
+<div class="line">17. Not So New Guy 26.75</div>
+<div class="line">19. Sierra LeCat Dowdle 26.25</div>
+<div class="line">20. bugaroo 26.0</div>
+<div class="line">21. We Pay Players 25.75</div>
+<div class="line">22. NoNND-Bo 1 24.75</div>
+<div class="line">23. NoNND-Bo 2 24.25</div>
 <div class="line">24. Sascha Picks Dogs 23.25</div>
-<div class="line">25. Momma Longhorn 21.75</div>
+<div class="line">25. Momma Longhorn 22.75</div>
 <div class="line">26. Call Me An Optimist 21.25</div>
-<div class="line">27. <strong>The New Mendoza Line 15.5</strong></div>
+<div class="line">27. <strong>The New Mendoza Line 17.5</strong></div>
 </div>
 </div>
 </body>
