--- a/bowl_pool/2025-2026_Non-CFP/rankings.html
+++ b/bowl_pool/2025-2026_Non-CFP/rankings.html
@@ -365,37 +365,37 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2026-01-01 23:51:31</em></div>
-<div class="line"><em>Last bowl scored:  LAS VEGAS BOWL (Utah vs. Nebraska)</em></div>
+<div class="line"><em>Last updated:  2026-01-02 17:28:38</em></div>
+<div class="line"><em>Last bowl scored:  ARMED FORCES BOWL (Texas State vs. Rice)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. Barkside Ballers 23.25</div>
-<div class="line">2. <strong>Sherrone Moore's Bad Day 21.25</strong></div>
-<div class="line">3. Dazed and Confoosballed 20.75</div>
-<div class="line">4. Arandas legacy Year 20.5</div>
-<div class="line">5. <strong>Battered Austin Syndrome 20.0</strong></div>
-<div class="line">6. <strong>Vibe-free since '73 19.25</strong></div>
-<div class="line">6. Wisconsin shoud've been here 19.25</div>
-<div class="line">6. Eclipse 19.25</div>
-<div class="line">9. Game of Throws 19.0</div>
-<div class="line">10. Mama Dawg 18.75</div>
-<div class="line">10. Upside 18.75</div>
-<div class="line">12. BlueOrRed 18.5</div>
-<div class="line">12. Just Call Me Dr. 18.5</div>
-<div class="line">14. Sierra LeCat Dowdle 17.75</div>
-<div class="line">14. Bearly Watching 17.75</div>
-<div class="line">14. We Pay Players 17.75</div>
-<div class="line">17. NoNND-Bo 1 16.75</div>
-<div class="line">18. #MamaBear 16.0</div>
-<div class="line">19. Momma Longhorn 15.75</div>
-<div class="line">19. Not So New Guy 15.75</div>
-<div class="line">21. NoNND-Bo 2 14.75</div>
-<div class="line">22. bugaroo 14.0</div>
-<div class="line">22. Down 14.0</div>
-<div class="line">24. Sascha Picks Dogs 13.75</div>
-<div class="line">24. First Round SIL 13.75</div>
-<div class="line">26. Call Me An Optimist 12.75</div>
-<div class="line">27. <strong>The New Mendoza Line 12.5</strong></div>
+<div class="line">2. <strong>Battered Austin Syndrome 22.0</strong></div>
+<div class="line">3. Dazed and Confoosballed 21.75</div>
+<div class="line">4. Arandas legacy Year 21.5</div>
+<div class="line">5. <strong>Vibe-free since '73 21.25</strong></div>
+<div class="line">5. <strong>Sherrone Moore's Bad Day 21.25</strong></div>
+<div class="line">7. Just Call Me Dr. 20.5</div>
+<div class="line">8. Wisconsin shoud've been here 20.25</div>
+<div class="line">8. Eclipse 20.25</div>
+<div class="line">10. Game of Throws 20.0</div>
+<div class="line">11. Mama Dawg 19.75</div>
+<div class="line">11. Upside 19.75</div>
+<div class="line">13. BlueOrRed 19.5</div>
+<div class="line">14. Bearly Watching 18.75</div>
+<div class="line">15. Sierra LeCat Dowdle 17.75</div>
+<div class="line">15. NoNND-Bo 1 17.75</div>
+<div class="line">15. We Pay Players 17.75</div>
+<div class="line">18. #MamaBear 17.0</div>
+<div class="line">19. Momma Longhorn 16.75</div>
+<div class="line">19. Not So New Guy 16.75</div>
+<div class="line">21. bugaroo 16.0</div>
+<div class="line">21. Down 16.0</div>
+<div class="line">23. NoNND-Bo 2 14.75</div>
+<div class="line">23. First Round SIL 14.75</div>
+<div class="line">25. <strong>The New Mendoza Line 14.5</strong></div>
+<div class="line">26. Sascha Picks Dogs 13.75</div>
+<div class="line">27. Call Me An Optimist 12.75</div>
 </div>
 </div>
 </body>
