--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -1557,6 +1557,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>35</td>
+<td>ARMED FORCES BOWL</td>
+<td>Texas State</td>
+<td>Rice</td>
+<td>10.5</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -1662,32 +1695,32 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td><strong>32.75</strong></td>
-<td><strong>31.75</strong></td>
-<td><strong>29.75</strong></td>
+<td><strong>33.75</strong></td>
+<td><strong>30.75</strong></td>
 <td><strong>23.25</strong></td>
-<td><strong>15.5</strong></td>
+<td><strong>17.5</strong></td>
 <td><strong>37.75</strong></td>
-<td><strong>21.75</strong></td>
-<td><strong>24.0</strong></td>
-<td><strong>26.25</strong></td>
-<td><strong>34.5</strong></td>
-<td><strong>30.5</strong></td>
-<td><strong>27.25</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>24.25</strong></td>
-<td><strong>28.75</strong></td>
-<td><strong>26.25</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>27.5</strong></td>
-<td><strong>29.25</strong></td>
-<td><strong>25.75</strong></td>
-<td><strong>29.0</strong></td>
-<td><strong>30.5</strong></td>
-<td><strong>28.5</strong></td>
-<td><strong>25.75</strong></td>
-<td><strong>28.75</strong></td>
-<td><strong>25.75</strong></td>
+<td><strong>22.75</strong></td>
 <td><strong>26.0</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>36.5</strong></td>
+<td><strong>31.5</strong></td>
+<td><strong>28.25</strong></td>
+<td><strong>24.75</strong></td>
+<td><strong>24.25</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>27.25</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>29.5</strong></td>
+<td><strong>30.25</strong></td>
+<td><strong>26.75</strong></td>
+<td><strong>30.0</strong></td>
+<td><strong>31.5</strong></td>
+<td><strong>30.5</strong></td>
+<td><strong>26.75</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>27.0</strong></td>
 </tr>
 </tbody>
 </table>
