--- a/bowl_pool/2025-2026_Non-CFP/results.html
+++ b/bowl_pool/2025-2026_Non-CFP/results.html
@@ -1293,38 +1293,71 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>27</td>
+<td>ARMED FORCES BOWL</td>
+<td>Texas State</td>
+<td>Rice</td>
+<td>10.5</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td><strong>23.25</strong></td>
-<td><strong>19.25</strong></td>
-<td><strong>20.75</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>12.5</strong></td>
 <td><strong>21.25</strong></td>
-<td><strong>15.75</strong></td>
-<td><strong>14.0</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>16.75</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>18.75</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>16.75</strong></td>
+<td><strong>19.75</strong></td>
 <td><strong>17.75</strong></td>
 <td><strong>20.0</strong></td>
-<td><strong>20.5</strong></td>
-<td><strong>18.75</strong></td>
-<td><strong>16.75</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>19.25</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>19.25</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>18.5</strong></td>
-<td><strong>18.5</strong></td>
-<td><strong>15.75</strong></td>
-<td><strong>18.75</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>19.0</strong></td>
 </tr>
 </tbody>
 </table>
