--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -1590,6 +1590,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>36</td>
+<td>LIBERTY BOWL</td>
+<td>Cincinnati</td>
+<td>Navy</td>
+<td>4.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>2.5<sup>*</sup></td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -1697,28 +1730,28 @@ ul.auto-toc {
 <td><strong>32.75</strong></td>
 <td><strong>33.75</strong></td>
 <td><strong>30.75</strong></td>
-<td><strong>23.25</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>37.75</strong></td>
-<td><strong>22.75</strong></td>
-<td><strong>26.0</strong></td>
+<td><strong>24.75</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>39.25</strong></td>
+<td><strong>24.25</strong></td>
+<td><strong>27.5</strong></td>
 <td><strong>26.25</strong></td>
-<td><strong>36.5</strong></td>
+<td><strong>38.0</strong></td>
 <td><strong>31.5</strong></td>
 <td><strong>28.25</strong></td>
-<td><strong>24.75</strong></td>
-<td><strong>24.25</strong></td>
-<td><strong>29.75</strong></td>
-<td><strong>27.25</strong></td>
-<td><strong>21.25</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>31.25</strong></td>
+<td><strong>28.75</strong></td>
+<td><strong>22.75</strong></td>
 <td><strong>29.5</strong></td>
 <td><strong>30.25</strong></td>
-<td><strong>26.75</strong></td>
+<td><strong>28.25</strong></td>
 <td><strong>30.0</strong></td>
-<td><strong>31.5</strong></td>
+<td><strong>33.0</strong></td>
 <td><strong>30.5</strong></td>
-<td><strong>26.75</strong></td>
-<td><strong>29.75</strong></td>
+<td><strong>29.25</strong></td>
+<td><strong>31.25</strong></td>
 <td><strong>25.75</strong></td>
 <td><strong>27.0</strong></td>
 </tr>
