--- a/bowl_pool/2025-2026_Non-CFP/results.html
+++ b/bowl_pool/2025-2026_Non-CFP/results.html
@@ -1326,6 +1326,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>28</td>
+<td>LIBERTY BOWL</td>
+<td>Cincinnati</td>
+<td>Navy</td>
+<td>4.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>2.5<sup>*</sup></td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
@@ -1334,28 +1367,28 @@ ul.auto-toc {
 <td><strong>23.25</strong></td>
 <td><strong>21.25</strong></td>
 <td><strong>21.75</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>16.75</strong></td>
+<td><strong>15.25</strong></td>
 <td><strong>16.0</strong></td>
+<td><strong>22.75</strong></td>
+<td><strong>18.25</strong></td>
+<td><strong>17.5</strong></td>
 <td><strong>17.75</strong></td>
-<td><strong>22.0</strong></td>
+<td><strong>23.5</strong></td>
 <td><strong>21.5</strong></td>
 <td><strong>19.75</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>14.75</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>21.75</strong></td>
 <td><strong>20.25</strong></td>
-<td><strong>18.75</strong></td>
-<td><strong>12.75</strong></td>
+<td><strong>14.25</strong></td>
 <td><strong>16.0</strong></td>
 <td><strong>20.25</strong></td>
-<td><strong>14.75</strong></td>
+<td><strong>16.25</strong></td>
 <td><strong>17.0</strong></td>
-<td><strong>19.5</strong></td>
+<td><strong>21.0</strong></td>
 <td><strong>20.5</strong></td>
-<td><strong>16.75</strong></td>
-<td><strong>19.75</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>21.25</strong></td>
 <td><strong>17.75</strong></td>
 <td><strong>20.0</strong></td>
 </tr>
