non-CFP bowls complete

--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -1623,6 +1623,72 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>37</td>
+<td>DUKE'S MAYO BOWL</td>
+<td>Mississippi State</td>
+<td>Wake Forest</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>38</td>
+<td>HOLIDAY BOWL</td>
+<td>Arizona</td>
+<td>SMU</td>
+<td>3.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -1727,32 +1793,32 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>32.75</strong></td>
+<td><strong>34.0</strong></td>
 <td><strong>33.75</strong></td>
-<td><strong>30.75</strong></td>
-<td><strong>24.75</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>39.25</strong></td>
-<td><strong>24.25</strong></td>
-<td><strong>27.5</strong></td>
-<td><strong>26.25</strong></td>
-<td><strong>38.0</strong></td>
-<td><strong>31.5</strong></td>
-<td><strong>28.25</strong></td>
-<td><strong>26.25</strong></td>
-<td><strong>25.75</strong></td>
-<td><strong>31.25</strong></td>
+<td><strong>32.0</strong></td>
+<td><strong>27.25</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>40.5</strong></td>
+<td><strong>25.5</strong></td>
 <td><strong>28.75</strong></td>
-<td><strong>22.75</strong></td>
+<td><strong>28.75</strong></td>
+<td><strong>39.25</strong></td>
+<td><strong>32.75</strong></td>
+<td><strong>28.25</strong></td>
+<td><strong>28.75</strong></td>
+<td><strong>28.25</strong></td>
+<td><strong>32.5</strong></td>
+<td><strong>28.75</strong></td>
+<td><strong>25.25</strong></td>
 <td><strong>29.5</strong></td>
-<td><strong>30.25</strong></td>
+<td><strong>32.75</strong></td>
 <td><strong>28.25</strong></td>
 <td><strong>30.0</strong></td>
 <td><strong>33.0</strong></td>
 <td><strong>30.5</strong></td>
-<td><strong>29.25</strong></td>
+<td><strong>30.5</strong></td>
 <td><strong>31.25</strong></td>
-<td><strong>25.75</strong></td>
+<td><strong>27.0</strong></td>
 <td><strong>27.0</strong></td>
 </tr>
 </tbody>
