--- a/bowl_pool/2025-2026_Non-CFP/rankings.html
+++ b/bowl_pool/2025-2026_Non-CFP/rankings.html
@@ -365,37 +365,37 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2026-01-02 20:56:00</em></div>
-<div class="line"><em>Last bowl scored:  LIBERTY BOWL (Cincinnati vs. Navy)</em></div>
+<div class="line"><em>Last updated:  2026-01-04 12:18:49</em></div>
+<div class="line"><em>Last bowl scored:  HOLIDAY BOWL (Arizona vs. SMU)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Battered Austin Syndrome 23.5</strong></div>
-<div class="line">2. Barkside Ballers 23.25</div>
-<div class="line">3. <strong>Sherrone Moore's Bad Day 22.75</strong></div>
-<div class="line">4. Dazed and Confoosballed 21.75</div>
-<div class="line">4. Wisconsin shoud've been here 21.75</div>
-<div class="line">6. Arandas legacy Year 21.5</div>
-<div class="line">7. <strong>Vibe-free since '73 21.25</strong></div>
-<div class="line">7. Upside 21.25</div>
-<div class="line">9. BlueOrRed 21.0</div>
-<div class="line">10. Just Call Me Dr. 20.5</div>
-<div class="line">11. Bearly Watching 20.25</div>
-<div class="line">11. Eclipse 20.25</div>
-<div class="line">13. Game of Throws 20.0</div>
-<div class="line">14. Mama Dawg 19.75</div>
-<div class="line">15. NoNND-Bo 1 19.25</div>
-<div class="line">15. Not So New Guy 19.25</div>
-<div class="line">17. Momma Longhorn 18.25</div>
-<div class="line">18. Sierra LeCat Dowdle 17.75</div>
-<div class="line">18. We Pay Players 17.75</div>
-<div class="line">20. bugaroo 17.5</div>
-<div class="line">21. #MamaBear 17.0</div>
-<div class="line">22. NoNND-Bo 2 16.25</div>
-<div class="line">22. First Round SIL 16.25</div>
-<div class="line">24. <strong>The New Mendoza Line 16.0</strong></div>
-<div class="line">24. Down 16.0</div>
-<div class="line">26. Sascha Picks Dogs 15.25</div>
-<div class="line">27. Call Me An Optimist 14.25</div>
+<div class="line">1. <strong>Battered Austin Syndrome 24.75</strong></div>
+<div class="line">2. Barkside Ballers 24.5</div>
+<div class="line">3. <strong>Sherrone Moore's Bad Day 24.0</strong></div>
+<div class="line">4. Dazed and Confoosballed 23.0</div>
+<div class="line">4. Wisconsin shoud've been here 23.0</div>
+<div class="line">6. Arandas legacy Year 22.75</div>
+<div class="line">6. Eclipse 22.75</div>
+<div class="line">8. NoNND-Bo 1 21.75</div>
+<div class="line">9. <strong>Vibe-free since '73 21.25</strong></div>
+<div class="line">9. Upside 21.25</div>
+<div class="line">11. BlueOrRed 21.0</div>
+<div class="line">12. Just Call Me Dr. 20.5</div>
+<div class="line">12. Not So New Guy 20.5</div>
+<div class="line">14. Sierra LeCat Dowdle 20.25</div>
+<div class="line">14. Bearly Watching 20.25</div>
+<div class="line">16. Game of Throws 20.0</div>
+<div class="line">17. Mama Dawg 19.75</div>
+<div class="line">18. Momma Longhorn 19.5</div>
+<div class="line">19. We Pay Players 19.0</div>
+<div class="line">20. bugaroo 18.75</div>
+<div class="line">20. NoNND-Bo 2 18.75</div>
+<div class="line">22. Sascha Picks Dogs 17.75</div>
+<div class="line">23. <strong>The New Mendoza Line 17.25</strong></div>
+<div class="line">24. #MamaBear 17.0</div>
+<div class="line">25. Call Me An Optimist 16.75</div>
+<div class="line">26. First Round SIL 16.25</div>
+<div class="line">27. Down 16.0</div>
 </div>
 </div>
 </body>
