--- a/bowl_pool/2025-2026_Non-CFP/results.html
+++ b/bowl_pool/2025-2026_Non-CFP/results.html
@@ -1359,37 +1359,103 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>29</td>
+<td>DUKE'S MAYO BOWL</td>
+<td>Mississippi State</td>
+<td>Wake Forest</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>30</td>
+<td>HOLIDAY BOWL</td>
+<td>Arizona</td>
+<td>SMU</td>
+<td>3.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>23.25</strong></td>
+<td><strong>24.5</strong></td>
 <td><strong>21.25</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>24.0</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>18.75</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>24.75</strong></td>
+<td><strong>22.75</strong></td>
+<td><strong>19.75</strong></td>
 <td><strong>21.75</strong></td>
-<td><strong>15.25</strong></td>
+<td><strong>18.75</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>16.75</strong></td>
 <td><strong>16.0</strong></td>
 <td><strong>22.75</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>23.5</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>19.25</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>21.75</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>20.25</strong></td>
 <td><strong>16.25</strong></td>
 <td><strong>17.0</strong></td>
 <td><strong>21.0</strong></td>
 <td><strong>20.5</strong></td>
-<td><strong>19.25</strong></td>
+<td><strong>20.5</strong></td>
 <td><strong>21.25</strong></td>
-<td><strong>17.75</strong></td>
+<td><strong>19.0</strong></td>
 <td><strong>20.0</strong></td>
 </tr>
 </tbody>
