--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,37 +365,37 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2026-01-02 20:56:03</em></div>
-<div class="line"><em>Last bowl scored:  LIBERTY BOWL (Cincinnati vs. Navy)</em></div>
+<div class="line"><em>Last updated:  2026-01-04 12:18:52</em></div>
+<div class="line"><em>Last bowl scored:  HOLIDAY BOWL (Arizona vs. SMU)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Sherrone Moore's Bad Day 39.25</strong></div>
-<div class="line">2. <strong>Battered Austin Syndrome 38.0</strong></div>
-<div class="line">3. <strong>Vibe-free since '73 33.75</strong></div>
-<div class="line">4. BlueOrRed 33.0</div>
-<div class="line">5. Barkside Ballers 32.75</div>
-<div class="line">6. Arandas legacy Year 31.5</div>
-<div class="line">7. Wisconsin shoud've been here 31.25</div>
-<div class="line">7. Upside 31.25</div>
-<div class="line">9. Dazed and Confoosballed 30.75</div>
-<div class="line">10. Just Call Me Dr. 30.5</div>
-<div class="line">11. Eclipse 30.25</div>
-<div class="line">12. #MamaBear 30.0</div>
-<div class="line">13. Down 29.5</div>
-<div class="line">14. Not So New Guy 29.25</div>
+<div class="line">1. <strong>Sherrone Moore's Bad Day 40.5</strong></div>
+<div class="line">2. <strong>Battered Austin Syndrome 39.25</strong></div>
+<div class="line">3. Barkside Ballers 34.0</div>
+<div class="line">4. <strong>Vibe-free since '73 33.75</strong></div>
+<div class="line">5. BlueOrRed 33.0</div>
+<div class="line">6. Arandas legacy Year 32.75</div>
+<div class="line">6. Eclipse 32.75</div>
+<div class="line">8. Wisconsin shoud've been here 32.5</div>
+<div class="line">9. Dazed and Confoosballed 32.0</div>
+<div class="line">10. Upside 31.25</div>
+<div class="line">11. Just Call Me Dr. 30.5</div>
+<div class="line">11. Not So New Guy 30.5</div>
+<div class="line">13. #MamaBear 30.0</div>
+<div class="line">14. Down 29.5</div>
+<div class="line">15. bugaroo 28.75</div>
+<div class="line">15. Sierra LeCat Dowdle 28.75</div>
+<div class="line">15. NoNND-Bo 1 28.75</div>
 <div class="line">15. Bearly Watching 28.75</div>
-<div class="line">16. Mama Dawg 28.25</div>
-<div class="line">16. First Round SIL 28.25</div>
-<div class="line">18. bugaroo 27.5</div>
-<div class="line">19. Game of Throws 27.0</div>
-<div class="line">20. Sierra LeCat Dowdle 26.25</div>
-<div class="line">20. NoNND-Bo 1 26.25</div>
-<div class="line">22. NoNND-Bo 2 25.75</div>
-<div class="line">22. We Pay Players 25.75</div>
-<div class="line">24. Sascha Picks Dogs 24.75</div>
-<div class="line">25. Momma Longhorn 24.25</div>
-<div class="line">26. Call Me An Optimist 22.75</div>
-<div class="line">27. <strong>The New Mendoza Line 19.0</strong></div>
+<div class="line">19. Mama Dawg 28.25</div>
+<div class="line">19. NoNND-Bo 2 28.25</div>
+<div class="line">19. First Round SIL 28.25</div>
+<div class="line">22. Sascha Picks Dogs 27.25</div>
+<div class="line">23. We Pay Players 27.0</div>
+<div class="line">23. Game of Throws 27.0</div>
+<div class="line">25. Momma Longhorn 25.5</div>
+<div class="line">26. Call Me An Optimist 25.25</div>
+<div class="line">27. <strong>The New Mendoza Line 20.25</strong></div>
 </div>
 </div>
 </body>
