highlight potential winners after CFP

--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,7 +365,7 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2026-01-04 12:18:52</em></div>
+<div class="line"><em>Last updated:  2026-01-04 16:56:46</em></div>
 <div class="line"><em>Last bowl scored:  HOLIDAY BOWL (Arizona vs. SMU)</em></div>
 </div>
 <div class="line-block">
@@ -382,7 +382,7 @@ ul.auto-toc {
 <div class="line">11. Just Call Me Dr. 30.5</div>
 <div class="line">11. Not So New Guy 30.5</div>
 <div class="line">13. #MamaBear 30.0</div>
-<div class="line">14. Down 29.5</div>
+<div class="line">14. <strong>Down 29.5</strong></div>
 <div class="line">15. bugaroo 28.75</div>
 <div class="line">15. Sierra LeCat Dowdle 28.75</div>
 <div class="line">15. NoNND-Bo 1 28.75</div>
