--- a/bowl_pool/2025-2026_CFP/rankings.html
+++ b/bowl_pool/2025-2026_CFP/rankings.html
@@ -365,13 +365,13 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2026-01-04 12:18:51</em></div>
+<div class="line"><em>Last updated:  2026-01-04 16:56:45</em></div>
 <div class="line"><em>Last bowl scored:  CFP Quarterfinal (Sugar) (Georgia vs. Ole Miss)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. <strong>Sherrone Moore's Bad Day 16.5</strong></div>
 <div class="line">2. <strong>Battered Austin Syndrome 14.5</strong></div>
-<div class="line">3. Down 13.5</div>
+<div class="line">3. <strong>Down 13.5</strong></div>
 <div class="line">4. #MamaBear 13.0</div>
 <div class="line">5. <strong>Vibe-free since '73 12.5</strong></div>
 <div class="line">6. First Round SIL 12.0</div>
