--- a/bowl_pool/2025-2026_Non-CFP/rankings.html
+++ b/bowl_pool/2025-2026_Non-CFP/rankings.html
@@ -365,7 +365,7 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2026-01-04 12:18:49</em></div>
+<div class="line"><em>Last updated:  2026-01-04 16:56:44</em></div>
 <div class="line"><em>Last bowl scored:  HOLIDAY BOWL (Arizona vs. SMU)</em></div>
 </div>
 <div class="line-block">
@@ -395,7 +395,7 @@ ul.auto-toc {
 <div class="line">24. #MamaBear 17.0</div>
 <div class="line">25. Call Me An Optimist 16.75</div>
 <div class="line">26. First Round SIL 16.25</div>
-<div class="line">27. Down 16.0</div>
+<div class="line">27. <strong>Down 16.0</strong></div>
 </div>
 </div>
 </body>
